NASACORT-18 - fixed on the issues made on On the questions with 2 o more lines of text, the second line starts misaligned.
On the question "What should my patients know about administering Nasacort®?", the bullets are off on mobile state.

On some of the questions the copy is still off when are below a bullet point

--- a/app/css/sections/_faq.scss
+++ b/app/css/sections/_faq.scss
@@ -30,7 +30,7 @@ p{
         min-width: 100%;
     }
     h1{
-        padding-left: 103px;
+        padding-left: 68px;
         @include breakpoint('mobile'){
             font-size: 19px;
             padding-left: 0;
@@ -168,9 +168,11 @@ p{
         position:relative;
         cursor: pointer;
         padding-left: 35px;
+        margin-left: 27px;
 
       @include breakpoint('mobile'){
-        padding-left: 55px;
+        padding-left: 28px;
+        margin-left: 0;
       }
 
 
